--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <meta name="description" content="انضم إلى منصة Dr.Bio لتعلم الأحياء مع Dr.Abdul Samie Jamal. استكشف دروس الأحياء المجانية وموارد علوم الحياة عبر الإنترنت.">
     <meta property="og:title" content="Dr.Bio">
     <meta property="og:description" content="انضم إلى منصة Dr.Bio لتعلم الأحياء مع Dr.Abdul Samie Jamal. استكشف دروس الأحياء المجانية وموارد علوم الحياة عبر الإنترنت.">
-    <meta property="og:image" content="https://drbio.cloud/og-image.png
+    <meta property="og:image" content="https://drive.google.com/file/d/1jvZgHkOFgScr9Damkn2j1tlLkX1TeBnm/view?usp=drive_link">
+    <meta property="og:type"  content="website">
+    
 
-
+    <link rel="icon" type="image/x-icon" href="logodr1.jpg">
+    <link rel="icon" type="image/jpg" href="logodr1.jpg">
     <style>
         /* إعدادات الصفحة الأساسية - Dark Mode */
         html, body {
@@ -420,8 +423,8 @@
 <footer>
   <h1 class="nd"><span class="ndl">Dr. Bio</span>تواصل مع</h1>
     <div class="social-menu">
-        <a href="https://https://www.facebook.com/bdalsmyjmal.253330?locale=ar_AR" class="social-btn facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://https://youtube.com/@abdelsameagamal3190?si=QBjfUiQQMV_x-BA4" class="social-btn youtube"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.facebook.com/share/17qcScAw8j/" class="social-btn facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://youtube.com/@abdelsameagamal3190?si=QBjfUiQQMV_x-BA4" class="social-btn youtube"><i class="fab fa-youtube"></i></a>
         <a href="https://wa.me/201093864940" class="social-btn whatsapp"><i class="fab fa-whatsapp"></i></a>
         <a href="tel:+201093864940" class="social-btn phone"><i class="fas fa-phone"></i></a>
     </div>
