--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <meta property="og:description" content="انضم إلى منصة Dr.Bio لتعلم الأحياء مع Dr.Abdul Samie Jamal. استكشف دروس الأحياء المجانية وموارد علوم الحياة عبر الإنترنت.">
     <meta property="og:image" content="https://drive.google.com/file/d/1jvZgHkOFgScr9Damkn2j1tlLkX1TeBnm/view?usp=drive_link">
     <meta property="og:type"  content="website">
-    
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
-    <link rel="icon" type="image/x-icon" href="logodr1.jpg">
-    <link rel="icon" type="image/jpg" href="logodr1.jpg">
+    <link rel="icon" type="image/x-icon" href="logodr.png">
+    <link rel="icon" type="image/png" href="logodr.png">
     <style>
         /* إعدادات الصفحة الأساسية - Dark Mode */
         html, body {
