--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="انضم إلى منصة Dr.Bio لتعلم الأحياء مع Dr.Abdul Samie Jamal. استكشف دروس الأحياء المجانية وموارد علوم الحياة عبر الإنترنت.">
     <meta property="og:title" content="Dr.Bio">
     <meta property="og:description" content="انضم إلى منصة Dr.Bio لتعلم الأحياء مع Dr.Abdul Samie Jamal. استكشف دروس الأحياء المجانية وموارد علوم الحياة عبر الإنترنت.">
-    <meta property="og:image" content="https://drive.google.com/file/d/1jvZgHkOFgScr9Damkn2j1tlLkX1TeBnm/view?usp=drive_link">
+    <meta property="og:image" content="https://raw.githubusercontent.com/abdullah172008/Dr">
     <meta property="og:type"  content="website">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
